--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser-dynamic": "2.4.9",
     "@angular/platform-browser": "2.4.9",
     "@angular/http": "2.4.9",
+    "@angular/forms": "2.4.9",
     "@angular/router": "3.4.9",
     "systemjs": "0.20.9",
     "core-js": "^2.4.1",
