--- a/package.json
+++ b/package.json
@@ -1,39 +1,47 @@
 {
-  "name": "rangular",
-  "author": "mohan kunwar",
-  "version": "1.0.0",
+  "name": "binder",
+  "version": "0.0.0",
   "license": "MIT",
-  "description": "dem app",
-  "repository": {},
   "scripts": {
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" "
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/core": "2.4.9",
-    "@angular/common": "2.4.9",
-    "@angular/compiler": "2.4.9",
-    "@angular/platform-browser-dynamic": "2.4.9",
-    "@angular/platform-browser": "2.4.9",
-    "@angular/http": "2.4.9",
-    "@angular/forms": "2.4.9",
-    "@angular/router": "3.4.9",
-    "systemjs": "0.20.9",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "angular2-jwt": "^0.2.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.2.0",
-    "zone.js": "^0.7.7"
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.35",
-    "@types/jasmine": "^2.5.45",
-    "@types/node": "7.0.5",
-    "concurrently": "^3.3.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.2.1"
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
